examples/Passing/Variables/assign_val_double2.c
int main () {
    int a = 1;
    int b = a = 5;
    return b;
}
