examples/Failing/Loops/fail_continue.c
int main () {
    int a=  5;
    continue;
    return 5;
}
